public class Bomba extends Conteudo {
    @Override
    public int revelar() {
        return 0;
    }
}
