public interface Clicavel {
    public int revelar();

}
