import java.util.ArrayList;

public class Tabuleiro {

    private int tamanho;
    private ArrayList<ArrayList<Quadrado>> board;


}
