package campoMinado;

public class Numerado extends Conteudo{
    @Override
    public int revelar() {
        return 0;
    }
}
