package campoMinado;

public class Vazio extends Conteudo{
    //Quadrado vazio
    @Override
    public int revelar() {
        return 0;
    }
}
